@@ -3,8 +3,6 @@ examples/check_language_639_1_fail.pl
 examples/check_language_639_1_ok.pl
 examples/check_language_639_2_fail.pl
 examples/check_language_639_2_ok.pl
-examples/check_language_fail.pl
-examples/check_language_ok.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
@@ -25,8 +23,7 @@ README
 SIGNATURE
 t/Mo-utils-Language/01-use.t
 t/Mo-utils-Language/02-version.t
-t/Mo-utils-Language/03-check_language.t
-t/Mo-utils-Language/04-check_language_639_1.t
-t/Mo-utils-Language/05-check_language_639_2.t
+t/Mo-utils-Language/03-check_language_639_1.t
+t/Mo-utils-Language/04-check_language_639_2.t
 xt/Mo-utils-Language/01-pod_coverage.t
 xt/Mo-utils-Language/02-pod.t
