@@ -11,18 +11,6 @@ DESCRIPTION
     Mo language utilities for checking of data objects.
 
 SUBROUTINES
-  "check_language"
-     check_language($self, $key);
-
-    It is deprecated, use other checks.
-
-    *Since version 0.01. Described functionality since version 0.04.*
-
-    Check parameter defined by $key if it's ISO 639-1 language code and if
-    language exists. Value could be undefined.
-
-    Returns undef.
-
   "check_language_639_1"
      check_language_639_1($self, $key);
 
@@ -44,10 +32,6 @@ SUBROUTINES
     Returns undef.
 
 ERRORS
-     check_language():
-             Parameter '%s' doesn't contain valid ISO 639-1 code.
-                     Value: %s
-
      check_language_639_1():
              Parameter '%s' doesn't contain valid ISO 639-1 code.
                      Codeset: %s
@@ -62,12 +46,12 @@ EXAMPLE1
      use strict;
      use warnings;
 
-     use Mo::utils::Language qw(check_language);
+     use Mo::utils::Language qw(check_language_639_1);
 
      my $self = {
              'key' => 'en',
      };
-     check_language($self, 'key');
+     check_language_639_1($self, 'key');
 
      # Print out.
      print "ok\n";
@@ -80,14 +64,14 @@ EXAMPLE2
      use warnings;
 
      use Error::Pure;
-     use Mo::utils::Language qw(check_language);
+     use Mo::utils::Language qw(check_language_639_1);
 
      $Error::Pure::TYPE = 'Error';
 
      my $self = {
              'key' => 'xx',
      };
-     check_language($self, 'key');
+     check_language_639_1($self, 'key');
 
      # Print out.
      print "ok\n";
@@ -96,43 +80,6 @@ EXAMPLE2
      # #Error [...utils.pm:?] Parameter 'key' doesn't contain valid ISO 639-1 code.
 
 EXAMPLE3
-     use strict;
-     use warnings;
-
-     use Mo::utils::Language qw(check_language_639_1);
-
-     my $self = {
-             'key' => 'en',
-     };
-     check_language_639_1($self, 'key');
-
-     # Print out.
-     print "ok\n";
-
-     # Output:
-     # ok
-
-EXAMPLE4
-     use strict;
-     use warnings;
-
-     use Error::Pure;
-     use Mo::utils::Language qw(check_language_639_1);
-
-     $Error::Pure::TYPE = 'Error';
-
-     my $self = {
-             'key' => 'xx',
-     };
-     check_language_639_1($self, 'key');
-
-     # Print out.
-     print "ok\n";
-
-     # Output like:
-     # #Error [...utils.pm:?] Parameter 'key' doesn't contain valid ISO 639-1 code.
-
-EXAMPLE5
      use strict;
      use warnings;
 
@@ -149,7 +96,7 @@ EXAMPLE5
      # Output:
      # ok
 
-EXAMPLE6
+EXAMPLE4
      use strict;
      use warnings;
 
